force-app/main/default/objects/Medication_Interaction__c/Medication_Interaction__c.object-meta.xml
<CustomObject>
    <label>Medication Interaction</label>
    <pluralLabel>Medication Interactions</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Interaction Number</label>
        <displayFormat>INT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>