force-app/main/default/objects/Medication_Interaction__c/fields/Drug_Pair__c.field-meta.xml
<CustomField>
    <fullName>Drug_Pair__c</fullName>
    <label>Drug Pair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>