force-app/main/default/objects/Medication_Interaction__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medication Interactions</relationshipLabel>
    <relationshipName>Medication_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>